# ncnn-android-yolov5

./: .gitignore
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
